Fix nav to only use menu icon on small screen and logo is a link now

--- a/client/templates/app/nav/_nav.sass
+++ b/client/templates/app/nav/_nav.sass
@@ -1,48 +1,77 @@
-body:not(.home), body:not(.show-initiative)
+body.home, body.show-initiative
   nav
-    background: $navbar-bg-color-main
-
-#logo-container
-  height: 56px
-  border-bottom: 2px solid darken($primary-color, 20%)
-  @media only screen and (min-width: 601px)
-    height: 64px
-
-#logo
-  font-size: 25px
-  color: #fff
-  background-image: url('images/cherish-logo.png')
-  background-size: 30px
-  background-repeat: no-repeat
-  background-position: left center
-  padding-left: 2.5rem
-  display: block
-  width: 200px
-
+    background: transparent
+    z-index: 999
+    position: relative
+    box-shadow: none
+    
 nav
-  background-color: transparent
   .nav-wrapper
-    z-index: 1
+    .brand-logo
+      background-image: url('images/cherish-logo.png')
+      background-size: 30px
+      background-repeat: no-repeat
+      background-position: left center
+      color: #fff
+      font-size: 25px
+      padding-left: 2.5rem
+    .right
+      .user-dropdown
+        i
+          display: inline-block
+          font-size: 100%
+          color: $primary-color 
+          position: relative
+          top: 2px
+      .user-profile
+        a.dropdown-button
+          img
+            margin-right: 10px
+            position: relative
+            top: 10px
+          
+
+        //   line-height: 100%
+        //   img
+        //     margin-right: 10px
+        //     position: relative
+        //     top: 10px
+          
+        // .dropdown-content
+        //   i
+        //     display: inline-block
+        //     font-size: 100%
+        //     color: $primary-color 
+        //     position: relative
+        //     top: 2px 
+            
+
+
   .side-nav
+    a
+      position: relative
+    a:hover
+      color: #fff
+      .notifications-button--action
+        i, span
+          display: inline
+        &__badge
+          top: 21px
+          background-color: #333
+          color: #fff
     li:first-child
       background-color: $primary-color
     li:hover, li.active
       background-color: $primary-color
-      a
-        color: #FFF
-  .user-profile
-    li
-      a
-        line-height: 100%
-      a > i
-        display: inline-block
-        font-size: 100%
-        color: $primary-color 
-        position: relative
-        top: 2px
-    img
-      margin-right: 10px
-      position: relative
-      top: 10px
-
-
+    .logo-wrapper
+      height: 56px
+      border-bottom: 2px solid darken($primary-color, 20%)
+      @media only screen and (min-width: 601px)
+        height: 64px
+    .notifications-button--action
+      i, span
+        display: inline
+      &__badge
+        top: 21px
+        background-color: $primary-color
+        color: #fff
